Fixed README link

--- a/secondSplit.html
+++ b/secondSplit.html
@@ -36,6 +36,8 @@
 
   <entry-page></entry-page>
 
+  <div id='newEntry'>New Entry</div>
+
   <!-- journal-entry web component -->
   <script src="./components/journal-entry.js" type="module"></script>
   <script src="./components/entry-page.js" type="module"></script>
